  * android: Run busybox install with -s, since some versions of Android
    prohibit making hard links.
  * Fix encoding of data written to git-annex branch. Avoid truncating
    unicode characters to 8 bits. Allow any encoding to be used, as with
    filenames (but utf8 is the sane choice). Affects metadata and repository
    descriptions, and preferred content expressions.

 -- Joey Hess <joeyh@debian.org>  Mon, 19 May 2014 15:59:25 -0400

git-annex (5.20140517) unstable; urgency=medium

  * webapp: Switched to bootstrap 3.
    Thanks, Sören Brunk.
  * Standalone builds now check gpg signatures before upgrading.
  * Simplified repository description line format. The remote name,
    if any, is always in square brackets after the description.
  * assistant: Clean up stale tmp files on startup.
  * webapp: Better ssh password prompting.
  * Depend on git-remote-gcrypt 0.20130908-6. Older versions
    fail when the assistant is run with no controlling tty.
  * Added ddar special remote.
    Thanks, Robie Basak.
  * webapp: Fixed drag and drop to reorder the list of remotes.
  * group: When no groups are specified to set, lists the current groups
    of a repository.
  * Add remote.$name.annex-shell configuration.
    Thanks, Fraser Tweedale 
  * Support symlinking git-annex and git-annex-shell
    from the Linux standalone bundle into PATH.
    Thanks, jlebar.

 -- Joey Hess <joeyh@debian.org>  Sat, 17 May 2014 13:30:39 -0400

git-annex (5.20140421) unstable; urgency=medium

  * assistant: Now detects immediately when other repositories push
    changes to a ssh remote, and pulls.
    ** XMPP is no longer needed in this configuration! **
    This requires the remote server have git-annex-shell with
    notifychanges support (>= 5.20140405)
  * webapp: Show a network signal icon next to ssh and xmpp remotes that
    it's currently connected with.
  * webapp: Rework xmpp nudge to prompt for either xmpp or a ssh remote 
    to be set up.