@@ -17,6 +17,8 @@ git-annex (5.20140518) UNRELEASED; urgency=medium
     unicode characters to 8 bits. Allow any encoding to be used, as with
     filenames (but utf8 is the sane choice). Affects metadata and repository
     descriptions, and preferred content expressions.
+  * webapp: When setting up a ssh remote, if the user inputs ~/foo,
+    normalize that to foo, since it's in the home directory by default.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 19 May 2014 15:59:25 -0400
 
